<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="150sp"
    android:layout_height="wrap_content"
    android:layout_marginEnd="8dp"
    app:cardCornerRadius="10dp"
    android:layout_marginBottom="5sp"
    android:layout_marginTop="5sp"

    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:background="@color/dark_gray"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:background="@color/boja_glavne_kartice"
            android:orientation="horizontal"
            >


            <TextView
                android:id="@+id/predmet_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="16dp"
                android:text="@string/predmet"
                android:textAlignment="center"
                android:textSize="20sp"
                app:layout_constraintEnd_toStartOf="@+id/status_img"
                app:layout_constraintHorizontal_bias="0.294"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/status_img" />

            <ImageView
                android:id="@+id/status_img"
                android:layout_width="15sp"
                android:layout_height="15sp"
                android:layout_marginTop="5sp"
                android:layout_marginEnd="4dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.01999998"
                app:srcCompat="@drawable/ic_launcher_background" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="3sp"
            android:layout_marginTop="5sp"
            android:layout_marginEnd="3sp"
            android:layout_marginBottom="3sp"
            app:cardCornerRadius="10dp"

            >


            <LinearLayout
                android:layout_width="145dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:background="@color/white"
                android:orientation="vertical"
                android:padding="10dp"

                >

                <TextView
                    android:id="@+id/kviz_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:padding="3dp"
                    android:text="@string/kviz"
                    android:textColor="@color/black"
                    android:textAlignment="center"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/datum_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:padding="3dp"
                    android:text="@string/datum"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="14sp" />


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="126dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="5dp">


                    <TextView
                        android:id="@+id/bodovi_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/bodovi"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/vrijeme_tv"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="RtlHardcoded,RtlSymmetry"
                        />

                    <TextView
                        android:id="@+id/vrijeme_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingStart="5sp"
                        android:text="@string/vrijeme"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/bodovi_tv"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="RtlSymmetry" />


                </androidx.constraintlayout.widget.ConstraintLayout>


            </LinearLayout>
        </androidx.cardview.widget.CardView>


    </LinearLayout>
</androidx.cardview.widget.CardView>